[workspace]
members = [ 
    "runner",
    "config", 
    "network", 
    "algorithm", 
    "env", 
    "memory",
]
resolver = "2"

[workspace.dependencies]
runner = { path = "runner" }
config = { path = "config" }
network = { path = "network" }
algorithm = { path = "algorithm" }
env = { path = "env" }
memory = { path = "memory" }

tch = "0.15.0"
pyo3 = "0.21.2"
ndarray = "0.15.6"
plotters = "0.3.5"
itertools = "0.13.0"
rand = "0.8.5"